    - All dungeons past Nauvis are now immune to atomic bombs.
    - Added Vulcanus quest that can be completed before claiming the center hex, removing the need to bring coins to Vulcanus.
    - Added per-planet global trade productivity modifiers.
      These are mod settings that can be tweaked or reverted to 0 if this change is unpreferred.
  Bugfixes:
    - Fixed /force-claim command not being able to claim liquid hexes.
    - Fixed dungeon looting quests being completed by picking up manually placed dungeon chests.
    - Fixed crash when opening trade overview while an equipment grid is open.
    - Fixed that the completion of a quest before its revelation was not revealing it.
---------------------------------------------------------------------------------------------------
Version: 1.0.18
Date: 16/7/25
  Bugfixes:
    - Hotfix for trade export notification being formatted incorrectly.
---------------------------------------------------------------------------------------------------
Version: 1.0.17
Date: 16/7/25
  Minor Features:
    - Added ability to export all trades as JSON text from trade overview.
  Bugfixes:
    - Fixed that hex core spawning was deleting entities (such as ores) incorrectly.
---------------------------------------------------------------------------------------------------
Version: 1.0.16
Date: 12/7/25
  Bugfixes:
    - Fixed crash with mods that modify steel chests.
---------------------------------------------------------------------------------------------------
Version: 1.0.15
Date: 1/7/25
  Bugfixes:
    - Fixed that the trade overview showed trades from deleted hex cores. (a bug introduced in 0.4.0)
---------------------------------------------------------------------------------------------------
Version: 1.0.14
Date: 30/6/25
  Bugfixes:
    - Fixed that the combination of mod settings to "unmix" resources and to spawn resources as "single hexes" was causing the hexagonal resources to omit some ore types.