@@ -15,6 +15,7 @@ Date: 16/7/25
     - Added Vulcanus quest that can be completed before claiming the center hex, removing the need to bring coins to Vulcanus.
     - Added per-planet global trade productivity modifiers.
       These are mod settings that can be tweaked or reverted to 0 if this change is unpreferred.
+    - Added extra huge volcanic rocks to Vulcanus' first hex to help with starting up if you don't bring coins.
   Bugfixes:
     - Fixed /force-claim command not being able to claim liquid hexes.
     - Fixed dungeon looting quests being completed by picking up manually placed dungeon chests.
